# wasp

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE.md  README.md  Taskfile.yml  specs.md  specs.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: hello.yaml  release.yaml  test.yaml
benchmarks/: CMakeLists.txt  CTestTestfile.cmake  bench_lexer.cpp
code/: catalog.wasp  cats.wasp  dogs.wasp  house.wasp  main.wasp  paris.wasp  room.wasp  utils.wasp
code/frozen/: class_example.wasp  class_new.wasp  enum_usage.wasp  io_usage.wasp  literal_type_usage.wasp  main copy.wasp  main.wasp  optional_usage.wasp  recursion.wasp  string_interpol_usage.wasp  template_function_overload.wasp  templates.wasp  trait_bug.wasp  trait_usage.wasp  type_alias_usage.wasp  types.wasp  utils.wasp
libs/ast/: AST.h  CMakeLists.txt  Expression.cpp  Expression.h  Resolvable.h  Statement.cpp  Statement.h  TypeAnnotation.h  TypeNode.h
libs/bytecode_system/: CFGraph.cpp  CFGraph.h  CMakeLists.txt  CodeObjectSerializer.cpp  CodeObjectSerializer.h  OpCode.h
libs/captain/: CMakeLists.txt  Captain.cpp  Captain.h  CaptainUtils.cpp  DependencyCrawler.cpp  DependencyCrawler.h  Workspace.h
libs/compiler/: CMakeLists.txt  Compiler.cpp  Compiler.h  Compiler_call.cpp  Compiler_callable.cpp  Compiler_constructor.cpp  Compiler_control_flow.cpp  Compiler_definitions.cpp  Compiler_exports.cpp  Compiler_expressions.cpp  Compiler_expressions_boring.cpp  Compiler_functions.cpp  Compiler_imports.cpp  Compiler_literals.cpp  Compiler_oops.cpp  Compiler_operators.cpp  Compiler_resolvers.cpp  Compiler_utils.cpp  Compiler_variables.cpp  InstructionPrinter.cpp  InstructionPrinter.h
libs/diagnostics/: CMakeLists.txt  Doctor.cpp  Doctor.h
libs/doctor/: CMakeLists.txt  Doctor.cpp  Doctor.h
libs/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  lexer.cpp  lexer.h
libs/object_system/: Builtins.h  CMakeLists.txt  ConstantPool.cpp  ConstantPool.h  ConstantPoolSerializer.h  NativeRegistry.cpp  NativeRegistry.h  Natives.cpp  Natives.h  ObjectStore.cpp  ObjectStore.h  ObjectStores.cpp  ObjectStores.h  Objects.cpp  Objects.h  ObjectsUtils.cpp  Objects_mangle.cpp  Objects_module.cpp  Objects_oops_object.cpp  Objects_oops_type.cpp  Objects_utils.cpp  RuntimeObjects.cpp  TypeObjects.cpp  Workspace.h
libs/parser/: Branching.cpp  CMakeLists.txt  Definition.cpp  Expression.cpp  ExpressionParselets.cpp  ExpressionParselets.h  Importing.cpp  Liar.cpp  Liar.h  Looping.cpp  Parselets.cpp  Parselets.h  Parser.cpp  Parser.h  ParserBranching.cpp  ParserDefinition.cpp  ParserExpression.cpp  ParserLooping.cpp  ParserStatement.cpp  ParserTypeAnnotation.cpp  Precedence.h  Statement.cpp  StupidLiar.cpp  StupidLiar.h  TokenPipe.cpp  TokenPipe.h  TypeAnnotation.cpp  parser.cpp  parser.h  register_parselets.cpp
libs/semantic_analyzer/: CMakeLists.txt  DependencyCrawler.cpp  DependencyCrawler.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzerExpression-copy.cpp  SemanticAnalyzerExpression.cpp  SemanticAnalyzerStatement-copy.cpp  SemanticAnalyzerStatement.cpp  SemanticAnalyzerType-copy.cpp  SemanticAnalyzerType.cpp  SemanticAnalyzerTypes.cpp  SemanticAnalyzerUtils copy.cpp  SemanticAnalyzerUtils.cpp  SymbolHoister.cpp  SymbolHoister.h  SymbolScope.cpp  SymbolScope.h  TypeChecker.h  TypeSystem.cpp
libs/semantics/: ASTCloner.cpp  ASTCloner.h  ASTFactory.cpp  ASTFactory.h  CMakeLists.txt  DependencyCrawler.cpp  DependencyCrawler.h  Salt.cpp  Salt.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzerExpressions.cpp  SemanticAnalyzerTypes.cpp  SemanticAnalyzer_ast_transforms.cpp  SemanticAnalyzer_call.cpp  SemanticAnalyzer_call_templates.cpp  SemanticAnalyzer_callables.cpp  SemanticAnalyzer_constructor.cpp  SemanticAnalyzer_control_flow.cpp  SemanticAnalyzer_definitions.cpp  SemanticAnalyzer_definitions_boring.cpp  SemanticAnalyzer_enum_resolver.cpp  SemanticAnalyzer_exports.cpp  SemanticAnalyzer_expressions.cpp  SemanticAnalyzer_expressions_boring.cpp  SemanticAnalyzer_functions.cpp  SemanticAnalyzer_hoist.cpp  SemanticAnalyzer_imports.cpp  SemanticAnalyzer_literals.cpp  SemanticAnalyzer_oops.cpp  SemanticAnalyzer_operators.cpp  SemanticAnalyzer_resolvers.cpp  SemanticAnalyzer_smart_liar.cpp  SemanticAnalyzer_types.cpp  SemanticAnalyzer_utils.cpp  SemanticAnalyzer_variables.cpp  SmartLiar.cpp  SmartLiar.h  SymbolHoister.cpp  SymbolHoister.h  (+15 more)
libs/symbol/: CMakeLists.txt  Symbol.cpp  Symbol.h  SymbolScope.cpp  SymbolScope.h
libs/token/: CMakeLists.txt  SourceCodePointer.h  Token.h
libs/type_system/: CMakeLists.txt  TypeSystem.cpp  TypeSystem.h
libs/vm/: CMakeLists.txt  VM.cpp  VM.h  VMMath.cpp  VM_basics.cpp  VM_classes.cpp  VM_definitions.cpp  VM_execute.cpp  VM_exports.cpp  VM_functions.cpp  VM_math.cpp  VM_members.cpp  VM_modules.cpp  VM_utils.cpp
play/: a  a.ll
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_compile.cpp  test_compile_branches.cpp  test_compile_expressions.cpp  test_compile_functions.cpp  test_compile_loops.cpp  test_compile_variables.cpp  test_lexer.cpp  test_parser.cpp  test_parser_access.cpp  test_parser_branching.cpp  test_parser_definitions.cpp  test_parser_dots.cpp  test_parser_expressions.cpp  test_parser_literals.cpp  test_parser_looping.cpp  test_parser_member_access.cpp  test_parser_others.cpp  test_parser_statements.cpp  test_parser_variable_definitions.cpp  test_utils.cpp  test_utils.h
tests/common/: test_utils.cpp  test_utils.h
tests/compiler/: CompilerTestBase.h  test_compile_branches.cpp  test_compile_expressions.cpp  test_compile_functions.cpp  test_compile_loops.cpp  test_compile_variables.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser_access.cpp  test_parser_branching.cpp  test_parser_definitions.cpp  test_parser_dots.cpp  test_parser_imports.cpp  test_parser_literals.cpp  test_parser_looping.cpp  test_parser_stars.cpp  test_parser_statements.cpp  test_parser_variable_definitions.cpp
tests/semantic_analyzer/: test_semantics.cpp
tests/vm/: test_vm.cpp
workspace/: main.wasp
(+56 files in other folders)
